<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imagem"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/evagas2" />

    <EditText
        android:id="@+id/nomeText"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:inputType="text"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/sobrenomeText"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:hint="@string/sobrenome"
        android:inputType="text"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/emailText"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/senhaText"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/confirmarSenhaText"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirmarSenha"
        android:inputType="textPassword"
        android:textSize="25sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cadastrar"
        android:textSize="22sp"
        android:textStyle="bold"
        android:id="@+id/button"
        android:onClick="mensagenExibir"
        android:background="@color/colorAzulClaro"/>

</LinearLayout>