<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imagem"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/evagas2" />


    <EditText
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/senhaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cadastroText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:onClick="abrir"
        android:text="@string/chamaCadastro"
        android:textSize="15dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imagem2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.44"
        android:src="@drawable/exemplo" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAzulClaro"
        android:onClick="abrirMain"
        android:text="@string/entrar"
        android:textAlignment="center"
        android:textSize="22dp"
        android:textStyle="bold"
        android:translationY="@android:dimen/notification_large_icon_height"/>
</LinearLayout>
