<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imagem"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/evagas2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/nomeVaga"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/nomeVaga"
            android:inputType="text"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/localVaga"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/localVaga"
            android:inputType="text"
            android:textSize="25sp" />
    </LinearLayout>

        <EditText
            android:id="@+id/descricaoVaga"
            android:layout_width="385dp"
            android:layout_height="180dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:hint="@string/descricaoVaga"
            android:inputType="text"
            android:textSize="25sp"
            android:scrollbarTrackVertical="@color/colorBlack"/>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAzulClaro"
        android:onClick="cadastrarVaga"
        android:text="CADASTRAR"
        android:textSize="22sp"
        android:textStyle="bold" />

</LinearLayout>